# biochar-pfas

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
biochar_pfas/: __init__.py  cli.py  orchestrate.py  pfas_ligands.py
docs/: pfas-workflow-runbook.md  usage.md
docs/plans/: phase-2-plan.md  phase-3-plan.md
examples/: pfas_temperature_grid.yaml
examples/pfas_binding/: README.md  build_inputs.py
tests/: test_cli.py  test_contract.py  test_examples.py  test_orchestrate.py  test_pfas_ligands.py  test_version.py
