[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biochar-pfas"
version = "0.1.0"
description = "PFAS-sorption MD setup workflow driving the biochar-simulator tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["biochar", "PFAS", "molecular-dynamics", "gromacs", "sorption", "OPLS-AA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]

# biochar-pfas is a driver on top of the independent biochar-simulator library.
# It needs a biochar that has the generic md_setup pre-solvation seam
# (PreSolvationStage / MoleculeInsertion).
dependencies = [
    "biochar>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
biochar-pfas = "biochar_pfas.cli:main"

[project.urls]
Homepage = "https://github.com/jolayfield/biochar-pfas"
Repository = "https://github.com/jolayfield/biochar-pfas"

[tool.setuptools.packages.find]
where = ["."]
include = ["biochar_pfas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
